# playwright-framework

./: .env  conftest.py  debug_test.py  main_pw.py  pyproject.toml  pytest.ini  requirements.txt
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
__pycache__/: conftest.cpython-311-pytest-9.0.2.pyc.6280
api/: add_book_api.py  generate_token_api.py
pages/: login_page.py  page_object.py  profile_page.py  search_book_page.py
test_data/: config_test_data.json  config_test_users.json
tests/: test_01_add_book_api.py  test_02_search_delete_books.py  test_case.py
utils/: common.py  config.py  debug_login_async.py  helpers.py
